# bazel_repo_utils

./: .pre-commit-config.yaml  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: release.yaml  release_prep.sh
.pre-commit-hooks/: bazel-test-all.sh
docs/: MODULE.bazel  README.md
docs/download/archives/: BUILD.bazel  repository.md
docs/lib/: BUILD.bazel  index.md
download/archives/: BUILD.bazel  defs.bzl  repository.bzl
examples/: MODULE.bazel
examples/foo/: foo.bzl
examples/repos/: BUILD.bazel  pg_src.bzl  wget_src.bzl
lib/: BUILD.bazel  index.bzl  integrity.bzl  schema.bzl  utils.bzl
tests/lib/: BUILD.bazel  index.bzl  integrity.bzl  schema.bzl  utils.bzl
