module(
    name = "examples",
    bazel_compatibility = [">=7.1.0"],
)

bazel_dep(name = "repo_utils", version = "", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "version_utils", version = "0.1.0", dev_dependency = True)

local_path_override(
    module_name = "repo_utils",
    path = "..",
)

download_archives = use_repo_rule("@repo_utils//download/archives:defs.bzl", "download_archives")

download_archives(
    name = "wget_src",
    index = "//third-party/wget:repo.json",
    patches = {
        "//third-party/wget/patches:0001-1.24.5-test-patch.patch": ">=1.24.5/*",
    },
)

download_archives(
    name = "pg_src",
    index = "//third-party/postgres:repo.json",
    patches = {
        "//third-party/postgres/patches:0001-16.0-fix-pgflex.patch": "<17.0",
    },
    version_scheme = "pgver",
    versions = ["16.0"],
)
