load(":index.bzl", index_test_suite = "test_suite")
load(":integrity.bzl", integrity_test_suite = "test_suite")
load(":schema.bzl", schema_test_suite = "test_suite")
load(":utils.bzl", utils_test_suite = "test_suite")

index_test_suite()

integrity_test_suite()

schema_test_suite()

utils_test_suite()
